Fixed spacing

--- a/ethwager/src/styles/displayTable.css
+++ b/ethwager/src/styles/displayTable.css
@@ -77,7 +77,7 @@ button.selection{
 
     .styled-table {
         font-size: 0.9em;
-        margin-left:2em;
-        margin-right:2em;
+        margin-left:auto;
+        margin-right:auto;
     }
   }
